toggle and navbar now shifts contents to the right instead of overlapping content. Navbar toggle is still position fixed, so when scrolled, items will go under but the Navbar won't disappear.

--- a/Styles/Nav.scss
+++ b/Styles/Nav.scss
@@ -12,9 +12,6 @@
   height: 100vh;
   margin-top: 0;
 
-  transition: all 0.2s;
-  transform: translateX(-$sidebarWidth);
-
   .logo {
     width: 68%;
   }
@@ -62,10 +59,4 @@
       color: yellow;
     }
   }
-}
-
-
-.container {
-  transition: all 0.2s;
-  transform: translateX(-$sidebarWidth);
 }
