--- a/Styles/Results.scss
+++ b/Styles/Results.scss
@@ -8,7 +8,7 @@
 #results {
   top: 30vh;
   position: relative;
-  left: $sidebarWidth;
+  left: $resultsGapWidth;
 
   white-space: nowrap;
 
